Implemenation of the EffectAnalyzer